--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,24 +1,12 @@
 {
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
-    "version": "0.1.0",
-    "command": "npm",
-    "isShellCommand": true,
-    "showOutput": "always",
-    "suppressTaskName": true,
+    "version": "2.0.0",
     "tasks": [
-        {
-            "taskName": "install",
-            "args": ["install"]
-        },
-        {
-            "taskName": "update",
-            "args": ["update"]
-        },
-        {
-            "taskName": "example",
-            "args": ["run", "example"],
-            "isBuildCommand": true
-        }
+      {
+        "type": "npm",
+        "script": "lint",
+        "problemMatcher": ["$eslint-stylish"]
+      }
     ]
-}
+  }
