--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-leaflet-bing",
+  "name": "react-leaflet-bing-v2",
   "version": "4.2.1",
   "description": "Bing layer as React compoment for Leaflet",
   "main": "dist/react-leaflet-bing.js",
